--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>This is my first project</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, quo cumque architecto sint eum quia distinctio. Consectetur alias amet impedit nihil rem quasi tempore magnam id est non debitis dolor tempora neque, ab laudantium? Est possimus sed laudantium, libero magni odit recusandae, iusto quasi quam amet ut dicta! Molestiae, ex.</p>
     <h3>This is Title</h3>
+    <img src="https://st2.depositphotos.com/7980778/11764/i/950/depositphotos_117643032-stock-photo-cute-baby-boy.jpg" alt="Cute Baby">
 </body>
 </html>
