paragaraph and title added

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, quo cumque architecto sint eum quia distinctio. Consectetur alias amet impedit nihil rem quasi tempore magnam id est non debitis dolor tempora neque, ab laudantium? Est possimus sed laudantium, libero magni odit recusandae, iusto quasi quam amet ut dicta! Molestiae, ex.</p>
     <h3>This is Title</h3>
     <img src="https://st2.depositphotos.com/7980778/11764/i/950/depositphotos_117643032-stock-photo-cute-baby-boy.jpg" alt="Cute Baby">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptas, ipsa odio reiciendis fuga nihil ex veniam enim alias corporis ducimus excepturi illo nemo. Amet ipsum consectetur, labore earum cupiditate aut mollitia ab excepturi? Iste, nemo amet esse, quia, praesentium non quis earum accusantium necessitatibus aliquid similique consectetur! Quae molestias natus repudiandae ipsum perspiciatis non eligendi.</p>
+    <h4>Changed title</h4>
 </body>
 </html>
