new style added

--- a/index.html
+++ b/index.html
@@ -6,13 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first project</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        #para{
+            color: blue;
+            font-style: italic;
+            width: 100%;
+        }
+        #ct{
+            color: black;
+            background-color: blue;
+            text-align: center;
+            font-size: 25px;
+        }
+    </style>
 </head>
 <body>
     <h1>This is my first project</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, quo cumque architecto sint eum quia distinctio. Consectetur alias amet impedit nihil rem quasi tempore magnam id est non debitis dolor tempora neque, ab laudantium? Est possimus sed laudantium, libero magni odit recusandae, iusto quasi quam amet ut dicta! Molestiae, ex.</p>
     <h3>This is Title</h3>
     <img src="https://st2.depositphotos.com/7980778/11764/i/950/depositphotos_117643032-stock-photo-cute-baby-boy.jpg" alt="Cute Baby">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptas, ipsa odio reiciendis fuga nihil ex veniam enim alias corporis ducimus excepturi illo nemo. Amet ipsum consectetur, labore earum cupiditate aut mollitia ab excepturi? Iste, nemo amet esse, quia, praesentium non quis earum accusantium necessitatibus aliquid similique consectetur! Quae molestias natus repudiandae ipsum perspiciatis non eligendi.</p>
-    <h4>Changed title</h4>
+    <p id="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptas, ipsa odio reiciendis fuga nihil ex veniam enim alias corporis ducimus excepturi illo nemo. Amet ipsum consectetur, labore earum cupiditate aut mollitia ab excepturi? Iste, nemo amet esse, quia, praesentium non quis earum accusantium necessitatibus aliquid similique consectetur! Quae molestias natus repudiandae ipsum perspiciatis non eligendi. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam at alias ratione, itaque repellendus iusto eveniet molestias quibusdam quo, magni officia eius libero! Maxime, corporis.</p>
+    <h4 id="ct">Changed title</h4>
 </body>
 </html>
